Modelisation de la second vue

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="description">Description de l\'artiste / groupe : </string>
     <string name="facebook">Facebook de l\'artiste / groupe : </string>
     <string name="scene">Type de scene : </string>
-    <string name="jour">Jour du concert de l\'artiste / groupe : </string>
-    <string name="heure">Heure du concert de l\'artiste / groupe : </string>
+    <string name="jour">Jour du concert : </string>
+    <string name="heure">Heure du concert : </string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
